--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,4 +11,11 @@ dependencies = [
     "email-validator>=2.1.0",
     "pydantic[email]>=2.12.5",
     "django-stubs>=5.2.9",
+    "psycopg[binary]>=3.1.0",
+]
+
+[dependency-groups]
+dev = [
+    "pytest>=8.0.0",
+    "pytest-django>=4.8.0",
 ]
