--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "pydantic[email]>=2.12.5",
     "django-stubs>=5.2.9",
     "psycopg[binary]>=3.1.0",
+    "pytz>=2025.2",
 ]
 
 [dependency-groups]
