added: ledger APIs

--- a/synapse/pytest.ini
+++ b/synapse/pytest.ini
@@ -3,5 +3,5 @@ DJANGO_SETTINGS_MODULE = synapse.test_settings
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
-testpaths = accounts/tests
+testpaths = accounts/tests, ledger/tests
 addopts = -v --tb=short
